Geoserver debug JAVA_OPTS. Works now.